--- a/ScrollView1/Base.lproj/Main.storyboard
+++ b/ScrollView1/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,50 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ScrollView1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qjf-do-fPj">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img" translatesAutoresizingMaskIntoConstraints="NO" id="cHN-VV-g4L">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="cHN-VV-g4L" firstAttribute="top" secondItem="OAV-Bm-iQx" secondAttribute="top" id="0IS-kF-CHs"/>
+                                    <constraint firstItem="cHN-VV-g4L" firstAttribute="leading" secondItem="OAV-Bm-iQx" secondAttribute="leading" id="9ZP-b9-e5A"/>
+                                    <constraint firstItem="cHN-VV-g4L" firstAttribute="height" secondItem="zqM-We-ohx" secondAttribute="height" id="FHN-wD-gXS"/>
+                                    <constraint firstItem="cHN-VV-g4L" firstAttribute="width" secondItem="zqM-We-ohx" secondAttribute="width" id="nH8-19-cXv"/>
+                                    <constraint firstItem="cHN-VV-g4L" firstAttribute="bottom" secondItem="OAV-Bm-iQx" secondAttribute="bottom" constant="818" id="u6P-hz-7Rq"/>
+                                    <constraint firstItem="cHN-VV-g4L" firstAttribute="trailing" secondItem="OAV-Bm-iQx" secondAttribute="trailing" constant="414" id="xe1-9F-yWA"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="OAV-Bm-iQx"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="zqM-We-ohx"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Qjf-do-fPj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FZe-Bh-SKX"/>
+                            <constraint firstItem="Qjf-do-fPj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="TiT-WU-8eG"/>
+                            <constraint firstItem="Qjf-do-fPj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Tnr-mk-bYL"/>
+                            <constraint firstItem="Qjf-do-fPj" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="oha-Mn-zYg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imvImage" destination="cHN-VV-g4L" id="HtZ-S3-AVL"/>
+                        <outlet property="scrollView" destination="Qjf-do-fPj" id="yjI-hp-6Mg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="img" width="1920" height="2620"/>
+    </resources>
 </document>
